# mlzoomcamp-hws

./: .gitignore  README.md  requirements.txt
week1/: mlzwk1hw1.ipynb
week10/: deployment.yaml  pyproject.toml  service.yaml
week2/: requirements.txt
week2/.ipynb_checkpoints/: mlzwk2hw-checkpoint.ipynb
week3/: classwork_week3.ipynb  homework_week3_mlzoomcap_2025.ipynb
week4/: homework_week4_mlzoomcamp_2025.ipynb
week5/: Dockerfile  Dockerfile.local  predict.py  pyproject.toml  q4.py  test.ipynb
week6/: classwork6.ipynb  homework6_mlzoomcamp2025.ipynb
week8/: example.py  main.py  mlzc-week8-hw.ipynb  pyproject.toml  setup.sh  train.py
week9/: Dockerfile  homework9.ipynb  lambda_function.py  main.py  pyproject.toml  requirements.txt
week9_2/: README.md  lambda_function.py  prepare_image.py  pyproject.toml  setup.sh  test.py
