[project]
name = "week8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.7.0",
    "jupyter>=1.1.1",
    "keras>=3.12.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "tensorflow>=2.20.0",
    "torch==2.8.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.23.0",
]
